	*** RELEASE 7.3.1 ***


2006-02-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Applyed patch by Yves. A crash happens when starting playing sound
	on some system.

	* configure.in:
	* src/gcompris/soundutil.c: (default_sound_played_signal_handler),
	(gcompris_sound_class_init):

	*** RELEASE 7.3 ***

2006-02-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: Release 7.3 Final

2006-02-17  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/spip_screenshot_remove.pl: new tool to remove old screenshots article
	  from a previous SPIP dump.

2006-02-15  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed location of sv/misc/fantastic.ogg

	* boards/sounds/sv/geography/fantastic.ogg:
	* boards/sounds/sv/misc/fantastic.ogg:

2006-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated, created screenshots of new activities.

	* boards/crane.xml.in:
	* boards/electric/variable_resistor.svg:
	* boards/fifteen.xml.in:
	* boards/hanoi.xml.in:
	* boards/hanoi_real.xml.in:
	* boards/paintings.xml.in:
	* boards/puzzle.xml.in:
	* boards/sudoku.xml.in:
	* boards/superbrain.xml.in:
	* boards/tangram.xml.in:
	* boards/traffic.xml.in:
	* docs/screenshots/awele.jpg:
	* docs/screenshots/awele_small.jpg:
	* docs/screenshots/colors.jpg:
	* docs/screenshots/colors1.jpg:
	* docs/screenshots/colors_small.jpg:
	* docs/screenshots/crane.jpg:
	* docs/screenshots/crane_small.jpg:
	* docs/screenshots/electric.jpg:
	* docs/screenshots/electric_small.jpg:
	* docs/take_screenshots.sh:

2006-02-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: added missing melody.py

	*** RELEASE 7.3RC1 ***

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>
	
	* boards/awele.xml.in:
	* gcompris.spec.in:
	* src/boards/Makefile.am:
	* configure.in:
	* src/gcompris/gcompris_db.c: (gcompris_db_init): patch by Yves from 7.4 branch to remove sqlite
	  database if it is empty.

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>

	New icons from Franck Doucet.
	
	* boards/boardicons/eye_colors.png: