@@ -1,3 +1,8 @@
+2006-02-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/python/electric.py: Fixed by Christian Gagneraud. Now the diode is idealized.
+	  the wire 0 is correctly managed regarding gnucap needs.
+
 	*** RELEASE 7.3.1 ***
 
 
